--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dipankar-majee-portfolio",
   "title": "Dipankar Majee • Developer & DevOps",
-  "description": "Helping brands thrive in the digital world. Located in The Netherlands. Delivering tailor-made digital designs and building interactive websites from scratch. © Code by Dipankar",
+  "description": "Helping brands thrive in the digital world. Located in India. Delivering tailor-made digital designs and building interactive websites from scratch. © Code by Dipankar",
   "author": {
     "name": "Dipankar Majee",
     "email": "deep2dipankar@gmail.com",
